# smart-sdlc-ai

./: .gitignore  .pdm-python  .replit  README.md  app.py  pyproject.toml
attached_assets/: Pasted-You-are-a-senior-AI-product-designer-and-software-architect-Your-task-is-to-help-design-a-smart--1749208636074.txt
data/: sdlc_templates.py
database/: models.py  repository.py
services/: ai_service.py
utils/: export_utils.py  sdlc_parser.py
