[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas>=0.24.2,<2.3.0",
    "plotly>=6.1.2",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.45.1",
    "ibm-watsonx-ai>=1.3.24",
]

[build-system]
requires = ["pdm-backend", "setuptools>=61.0"]
build-backend = "pdm.backend"

[tool.setuptools]
py-modules = ["app"]  # Specify app.py as the module (omit the .py extension)